--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -63,7 +63,7 @@ section {
 }
 /* Hero Style Start */
 .hero {
-    background-image: url("../images/hero-bg.jpg");
+    background-image: url('../images/hero-bg.jpg');
     height: 600px;
     background-size: cover;
     background-position: center;
