--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -110,3 +110,24 @@ right: 140px;
     font-size: 16px;
 }
 /* Hero Style End */
+
+.intro {
+    text-align: center;
+}
+.intro h2 {
+    display: inline-block;
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+}
+.intro p{
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+}
+
