--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -114,15 +114,7 @@ right: 140px;
 .intro {
     text-align: center;
 }
-.intro h2 {
-    display: inline-block;
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-}
+
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
@@ -131,3 +123,47 @@ right: 140px;
     margin: 0 auto;
 }
 
+.steps {
+    text-align: center;
+    background: #fce138;
+}
+
+.steps div {
+    margin-bottom: 80px;
+}
+
+.steps img {
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+}
+
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+}
+.steps span {
+    font-size: 38px;
+}
+
+.section-title {
+font-size: 55px;
+color: #024e76;
+margin-bottom: 35px;
+padding: 0 100px 20px 100px;
+display: inline-block;
+border-bottom: 3px solid;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
