--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -214,3 +214,45 @@ border-bottom: 3px solid;
     font-size: 17px;
     line-height: 1.3;
 }
+
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+    text-align:center;
+    border-bottom-color: #39a6b2;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+width: 410px;
+display: inline-block;
+vertical-align: top;
+text-align: left;
+margin: 30px 0 0 60px;
+color: white;
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+    margin: 20px 0 0 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
