--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -12,6 +12,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
 }
 header h1 {
@@ -19,7 +22,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
 
 header a {
@@ -28,7 +30,6 @@ header a {
 
 }
 header nav {
-    float: right;
     margin: 7px 0;
 }
 header nav ul li {
