--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -32,13 +32,17 @@ header a {
 header nav {
     margin: 7px 0;
 }
-header nav ul li {
-    display: inline;
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 footer {
     background: #fce138;
