--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -48,15 +48,16 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div{
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -69,22 +70,19 @@ section {
 /* Hero Style Start */
 .hero {
     background-image: url('../images/hero-bg.jpg');
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .hero-form {
 background-color: #fce138;
 padding: 20px;
-width: 500px;
 color: #024e76;
 border-style: solid;
 border-width: 3px;
 border-color: #024e76;
-position: absolute;
-bottom: 120px;
-right: 140px;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -104,15 +102,34 @@ right: 140px;
     width: 100%;
     margin-bottom: 15px;
 }
+
 .hero-form label {
     margin: 0 5px;
+    width: 40%;
+    margin: 3.5%;
 }
+
 .hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+font-style: italic;
+font-size: 55px;
+color: #fce138;
 }
 /* Hero Style End */
 
