--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -133,20 +133,16 @@ color: #fce138;
 }
 /* Hero Style End */
 
-.intro {
-    text-align: center;
-}
-
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -176,10 +172,11 @@ color: #fce138;
 .section-title {
 font-size: 55px;
 color: #024e76;
-margin-bottom: 35px;
-padding: 0 100px 20px 100px;
-display: inline-block;
 border-bottom: 3px solid;
+padding-bottom: 20px;
+text-align: center;
+margin: 0 auto 35px auto;
+width: 50%;
 }
 
 .primary-border {
@@ -191,7 +188,7 @@ border-bottom: 3px solid;
 }
 
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -238,7 +235,6 @@ border-bottom: 3px solid;
 }
 
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -277,4 +273,8 @@ color: white;
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
