--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -142,31 +142,55 @@ color: #fce138;
     text-align: center;
 }
 
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-img img {
+    max-width: 100%;
+}
 .steps {
     background: #fce138;
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
-    color: #39a6b2;
-    font-size: 23px;
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
-.steps span {
-    font-size: 38px;
+
+.step-text{
+    flex: 12;
+}
+
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+}
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+
 }
 
 .section-title {
@@ -185,10 +209,6 @@ width: 50%;
 
 .secondary-border {
     border-color: #39a6b2;
-}
-
-.trainers {
-
 }
 
 .trainer {
