--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -15,6 +15,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
 
 }
 header h1 {
@@ -22,6 +29,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a {
@@ -43,7 +51,18 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
+/* Header/navbar styles end */
+
+/* Footer Styles Start */
 footer {
     background: #fce138;
     width: 100%;
@@ -64,26 +83,33 @@ footer div{
 footer a {
     color: #024e76;
 }
+/* End Footer Styles */
+/* Style All Section Tags */
 section {
     padding: 60px;
 }
+
 /* Hero Style Start */
 .hero {
     background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
 }
+
 .hero-form {
-background-color: #fce138;
+background-color: rgba(252, 225, 56,0.8);
 padding: 20px;
 color: #024e76;
 border-style: solid;
 border-width: 3px;
 border-color: #024e76;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+border-radius: 15px;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -102,6 +128,13 @@ border-color: #024e76;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -114,6 +147,11 @@ border-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;  
 }
 
 .hero-cta {
@@ -129,9 +167,32 @@ border-color: #024e76;
 font-style: italic;
 font-size: 55px;
 color: #fce138;
+text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* Hero Style End */
 
+/* SECTION TITLE STYLES START */
+.section-title {
+    font-size: 48px;
+    border-bottom: 3px solid;
+    color: #024e76;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+  }
+  
+  .primary-border {
+    border-color: #fce138;
+  }
+  
+  .secondary-border {
+    border-color: #39a6b2;
+  }
+  /* SECTION TITLE STYLES END */
+  
+
+/* What we do styles */
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
@@ -139,6 +200,13 @@ color: #fce138;
     font-size: 20px;
     margin: 0 auto;
     text-align: center;
+}
+
+/* WHAT YOU DO STYLES END */
+
+/* WHAT YOU DO STYLES START */
+.steps {
+    background: #fce138;
 }
 
 .step {
@@ -152,17 +220,9 @@ color: #fce138;
     justify-content: space-between;
 }
 
-.step-img {
-    flex: 1 12%;
-    margin-right: 20px;
+.step:last-child{
+    border-bottom: none;
 }
-.step-img img {
-    max-width: 100%;
-}
-.steps {
-    background: #fce138;
-}
-
 
 .step h3 {
     color: #024e76;
@@ -177,6 +237,15 @@ color: #fce138;
     align-items: center;
 }
 
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
 .step-text{
     flex: 12;
 }
@@ -189,27 +258,11 @@ color: #fce138;
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
-
 }
+/* WHAT YOU DO STYLES END */
 
-.section-title {
-font-size: 48px;
-color: #024e76;
-border-bottom: 3px solid;
-padding-bottom: 20px;
-text-align: center;
-margin: 0 auto 35px auto;
-width: 50%;
-}
 
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
-
+/* MEET THE TRAINERS START */
 .trainer {
     margin: 0 auto 20px auto;
     flex: 1;
@@ -234,14 +287,6 @@ width: 50%;
     line-height: 1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .trainer-bio h3 {
     font-size: 28px;
 }
@@ -255,7 +300,10 @@ width: 50%;
 .trainer-bio p {
     font-size: 17px;
 }
+/* TRAINER STYLES END */
 
+
+/* REACH OUT STYLES START */
 .contact {
     background: #024e76;
 }
@@ -290,7 +338,7 @@ color: white;
 
 .contact-info p,
 .contact-info address {
-    margin: 20px 0 0 0;
+    margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
@@ -304,6 +352,13 @@ color: white;
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, .75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -314,12 +369,29 @@ color: #024e76;
 text-align: center;
 padding: 15px 0;
 font-size: 16px;
-
+border-radius: 10px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
+
 .contact-info a {
     color: #fce138;
 }
+/* REACH OUT STYLES END */
 
+
+/* UTILITIES */
+.text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+  
 .flex-row {
     display: flex;
 }
@@ -330,6 +402,7 @@ font-size: 16px;
         header {
             padding-bottom: 0;
             justify-content: center;
+            position: relative;
         }
         header h1 {
             width: 100%;
