final css touches

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,3 +1,8 @@
+:root{
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
 *{
     box-sizing: border-box;
     margin: 0;
@@ -5,13 +10,13 @@
 }
 body {
     /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -22,20 +27,20 @@ header {
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a {
     text-decoration: none;
-    color: #fce138;
-
+    color: var(--primary-color);
 }
 header nav {
     margin: 7px 0;
@@ -55,8 +60,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -64,15 +68,14 @@ header nav ul li a:hover {
 
 /* Footer Styles Start */
 footer {
-    background: #fce138;
-    width: 100%;
+    background: var(--primary-color);    width: 100%;
     padding: 40px 35px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);    
     font-size: 30px;
     margin: 0;
 }
@@ -81,7 +84,7 @@ footer div{
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 /* End Footer Styles */
 /* Style All Section Tags */
@@ -104,10 +107,10 @@ section {
 .hero-form {
 background-color: rgba(252, 225, 56,0.8);
 padding: 20px;
-color: #024e76;
+color: var(--secondary-color);
 border-style: solid;
 border-width: 3px;
-border-color: #024e76;
+border-color: var(--secondary-color);
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 border-radius: 15px;
 }
@@ -121,15 +124,74 @@ border-radius: 15px;
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);    
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.75);
+}
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid var(--secondary-color);    
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);    
+    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+}
+
+.checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after {
+    content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
 }
 
 .form-input:focus{
@@ -142,8 +204,7 @@ border-radius: 15px;
 }
 
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);    background-color: var(--secondary-color);    
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -166,7 +227,7 @@ border-radius: 15px;
 .hero-cta h2 {
 font-style: italic;
 font-size: 55px;
-color: #fce138;
+color: var(--primary-color);
 text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* Hero Style End */
@@ -175,7 +236,7 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 .section-title {
     font-size: 48px;
     border-bottom: 3px solid;
-    color: #024e76;
+    color: var(--secondary-color);
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -183,19 +244,19 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   .primary-border {
-    border-color: #fce138;
-  }
+    border-color: var(--primary-color);
+ }
   
   .secondary-border {
-    border-color: #39a6b2;
-  }
+    border-color: var(--tertiary-color);
+}
   /* SECTION TITLE STYLES END */
   
 
 /* What we do styles */
 .intro p{
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -206,14 +267,14 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 /* WHAT YOU DO STYLES START */
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -225,7 +286,7 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -251,13 +312,13 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 /* WHAT YOU DO STYLES END */
 
@@ -266,8 +327,8 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 .trainer {
     margin: 0 auto 20px auto;
     flex: 1;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .trainers {
@@ -305,13 +366,13 @@ text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 /* REACH OUT STYLES START */
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);    
     text-align:center;
-    border-bottom-color: #39a6b2;
+    border-bottom-color: var(--tertiary-color);
 }
 
 .contact-info > * {
@@ -332,7 +393,7 @@ color: white;
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);   
     font-size: 32px;
 }
 
@@ -344,11 +405,11 @@ color: white;
     font-style: normal;
 }
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -364,8 +425,8 @@ color: white;
 .contact-form button {
 width : 100%;
 border: none;
-background: #fce138;
-color: #024e76;
+background: var(--primary-color);
+color: var(--secondary-color);
 text-align: center;
 padding: 15px 0;
 font-size: 16px;
@@ -373,12 +434,12 @@ border-radius: 10px;
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 /* REACH OUT STYLES END */
 
